add new value key

--- a/Web.config
+++ b/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="ExternalUrl" value="https://devmimcsb2c.b2clogin.com:443/devmimcsb2c.onmicrosoft.com/devmimcsb2c.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1A_SIGNUP_SIGNIN&amp;client_id=6ef7a9ab-2a18-48c3-ac67-5435a3965d12&amp;nonce=defaultNonce&amp;redirect_uri=http%3a%2f%2flocalhost%3a59327%2fHome&amp;scope=openid&amp;response_type=id_token&amp;prompt=login" />
+    <add key="ExternalUrl" value="https://devmimcsb2c.b2clogin.com/devmimcsb2c.onmicrosoft.com/devmimcsb2c.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1A_SIGNUP_SIGNIN&amp;client_id=6ef7a9ab-2a18-48c3-ac67-5435a3965d12&amp;nonce=defaultNonce&amp;redirect_uri=http%3a%2f%2flocalhost%3a7105%2fsso&amp;scope=openid&amp;response_type=id_token&amp;prompt=login" />
     <add key="ida:ClientId" value="6744cce7-1e68-48c5-88fc-ca4c61fe7aab" />
     <add key="ida:Tenant" value="emanuelorg" />
     <add key="ida:SignUpSignInPolicyId" value="B2C_1_AppFramework4.5" />
